--- a/src/all.scss
+++ b/src/all.scss
@@ -56,13 +56,16 @@ body {
     padding: 0;
     max-width: 100%;
     overflow-x: hidden;
-
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100vw;
     min-height: 100vh;
     z-index: -1;
+
+    @media only screen and (max-width: 850px) {
+        min-height: calc(100vh - 55px) !important;
+    }
 
     &[has-top-right="true"] {
         &::-webkit-scrollbar-track-piece:start {
