--- a/src/components/SearchBox/searchBox.module.scss
+++ b/src/components/SearchBox/searchBox.module.scss
@@ -1,14 +1,14 @@
 .searchBoxHolder {
-    width: 85%;
-    min-width: 300px;
-    box-sizing: border-box;
-    margin: 4px auto 20px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
-    padding: 8px 8px 13px;
-    box-shadow: inset 0 -5px rgba(0, 0, 0, 0.2), 0 0 3px rgba(0, 0, 0, 0.15);
     background-color: var(--primary-color);
+    box-shadow: inset 0 -5px rgba(0, 0, 0, 0.2), 0 0 3px rgba(0, 0, 0, 0.15);
+    width: 85%;
+    min-width: 300px;
+    padding: 10px 10px 15px 10px;
+    border-radius: 5px;
+    margin: 5px auto 20px;
 
     &[data-no-padding="true"] {
         width: 99%;
@@ -18,17 +18,22 @@
 
 .searchContainer {
     display: flex;
-    flex-direction: row;
+    align-items: center;
     background-color: var(--background-color);
+    width: 100%;
     min-width: 300px;
-    height: 40px;
+    height: 30px;
+    padding: 5px 2.5px 5px 10px;
     border-radius: 5px;
+
+    @media screen and (max-width: 850px) {
+        min-width: 250px;
+    }
 }
 
 .searchInput {
     border: none;
-    margin: 4px 7px;
-    height: 30px;
+    height: max-content;
     width: 100%;
     font-size: 18px;
     text-align: left;
@@ -51,7 +56,6 @@
     align-items: center;
     background-color: var(--background-color);
     gap: 5px;
-    margin-right: 2px;
 }
 
 .searchButton {
@@ -59,7 +63,7 @@
     color: var(--accent-color);
     background-color: var(--primary-color);
     border-radius: 5px;
-    height: 36px;
+    height: 35px;
     width: 35px;
     display: flex !important;
     justify-content: center;
@@ -70,7 +74,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
-    transition: .2s;
+    transition: .2s ease;
 
     &:hover {
         background-color: var(--accent-color);
