--- a/src/components/TopRight/topRight.module.scss
+++ b/src/components/TopRight/topRight.module.scss
@@ -7,7 +7,7 @@
     z-index: 5;
 
     @media only screen and (max-width: 850px) {
-        position: absolute;
+        position: fixed;
         top: 55px;
         width: 100%;
         justify-content: center;
@@ -124,7 +124,7 @@
     border-radius: 0 0 10px 10px;
     box-sizing: border-box;
     padding: 0 10px 6px;
-    box-shadow: inset 0 -6px rgba(0, 0, 0, .2), 0 0 4px rgba(0, 0, 0, .15);
+    box-shadow: inset 0 -6px rgba(0, 0, 0, .2);
     justify-content: center;
     align-items: center;
     font-size: 22px;
@@ -145,8 +145,9 @@
     }
 
     @media only screen and (max-width: 850px) {
-        height: 35px;
+        height: 40px;
         margin: 0 5px;
+        margin-top: -6px;
         font-size: 16px;
     }
 }
