--- a/src/views/Settings/settings.module.scss
+++ b/src/views/Settings/settings.module.scss
@@ -35,7 +35,6 @@
         padding: 15px;
         flex-grow: 1;
         justify-content: center;
-        align-items: center;
     }
 }
 
@@ -73,9 +72,12 @@
 .planText {
     display: flex;
     flex-direction: row;
-    align-items: center;
     margin: 2px 0;
     font-size: 26px;
+
+    @media only screen and (max-width:768px) {
+        flex-direction: column;
+    }
 
     &>div:nth-child(1) {
         font-family: "Titan One", sans-serif;
@@ -90,4 +92,8 @@
 
 .upgradeButton {
     margin-top: 10px;
+
+    @media only screen and (max-width:768px) {
+        margin-top: 20px;
+    }
 }
