--- a/src/views/Store/store.module.scss
+++ b/src/views/Store/store.module.scss
@@ -31,9 +31,12 @@
 }
 
 .container {
-    margin: 25px 0 35px 1%;
+    display: flex;
+    margin: 0 0 35px 1%;
     width: calc(95.5% - 280px);
     padding-bottom: 20px;
+    gap: 20px;
+    flex-direction: column;
 
     @media screen and (max-width: 1010px) {
         margin: 25px 5% 35px;
@@ -83,7 +86,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     text-align: left;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     background-color: var(--primary-color);
     border-radius: 7px;
     box-shadow: inset 0 -5px rgba(0, 0, 0, 0.2), 0 0 3px rgba(0, 0, 0, 0.15);
@@ -94,12 +97,13 @@
 }
 
 .categoryTitle {
-    font-size: 3rem;
+    font-size: 2.7rem;
     font-family: "Titan One";
 }
 
 .categorySubTitle {
     font-size: 1rem;
+    color: rgba(255, 255, 255, 0.8);
     margin-top: 3px;
 }
 
@@ -115,14 +119,133 @@
 .categoryProducts {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 20px;
     margin-top: 15px;
+
+    @media screen and (max-width: 768px) {
+        justify-content: center;
+    }
 }
 
 .product {
-    width: 30%;
+    position: relative;
+    display: flex;
+    width: 200px;
+    height: 200px;
     margin-bottom: 1rem;
     padding: 1rem;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
+    border-radius: 10px;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    // background: linear-gradient(15deg, #071d8b, #3d8def);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5) inset, 0 0 10px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    overflow: hidden;
+    transition: .2s ease;
+
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
+
+    & > img {
+        transition: .2s ease;
+    }
+
+    &:hover {
+        transform: scale(0.97);
+
+        & > img {
+            transform: rotate(-5deg);
+        }
+
+        & > .shine {
+            filter: blur(5px);
+            --shineSpeed: 3s;
+
+            &:nth-child(3) {
+                background: rgba(255, 255, 255, 0.25);
+                animation: shine var(--shineSpeed) ease infinite;   
+                width: 80px;
+            }
+
+            &:nth-child(4) {
+                background: rgba(255, 255, 255, 0.2);
+                animation: shine var(--shineSpeed) ease 0.085s infinite;   
+                width: 70px;
+            }
+            &:nth-child(5) {
+                background: rgba(255, 255, 255, 0.15);
+                animation: shine var(--shineSpeed) ease 0.175s infinite;   
+                width: 50px;
+            }
+        }
+    }
+
+    &:active {
+        transform: scale(0.9);
+    }
+
+    & > .shine {
+        position: absolute;
+        top: 0;
+        left: -100px;
+        height: 300px;
+        transform: skew(-50deg);
+        z-index: 1;
+        opacity: 0;
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+    }
+}
+
+@keyframes shine {
+    0% {
+        opacity: 0.7;
+        left: -500px;
+    }
+
+    60% {
+        opacity: 1;
+        left: 655px;
+    }
+
+    100% {
+        opacity: 1;
+        left: 655px;
+    }
+}
+
+.productImage {
+    width: fit-content;
+    height: 100px;
+    padding: 10px;
+    object-fit: contain;
+    // background-color: rgba(0, 0, 0, 0.2);
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.7));
+    border-radius: 10px;
+}
+
+.productText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.productTitle {
+    font-size: 1.5rem;
+    font-family: "Titan One", sans-serif;
+}
+
+.productPrice {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-top: -5px;
+}
+
+.productSubPrice {
+    font-size: 0.75rem;
+    opacity: 0.5;
 }
