--- a/src/views/Market/market.module.scss
+++ b/src/views/Market/market.module.scss
@@ -1,3 +1,44 @@
+.rightSide {
+    position: fixed;
+    right: 2.5%;
+    top: 0;
+    width: 250px;
+    height: 100vh;
+    user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    @media screen and (max-width: 1010px) {
+        display: none;
+    }
+}
+
+.rightSideStore {
+    position: absolute;
+    height: 400px;
+}
+
+.rightSideBlook {
+    position: absolute;
+    margin-top: 90px;
+    margin-left: 30px;
+    width: 70px;
+    height: 85px;
+    transform: rotate(10deg);
+}
+
+.leftSide {
+    margin: 0 0 35px 1%;
+    width: calc(95.5% - 260px);
+
+    @media screen and (max-width: 1010px) {
+        width: 100%;
+        margin: 0;
+    }
+}
+
 .categoryContainer {
     display: flex;
     flex-direction: column;
@@ -11,7 +52,7 @@
     gap: 5px;
     font-family: "Titan One", sans-serif;
     font-size: 35px;
-    margin: 15px 5% 10px;
+    margin: 20px 5% 10px;
     cursor: pointer;
     user-select: none;
     transition: filter .2s;
@@ -174,7 +215,7 @@
     bottom: 12px;
     left: 0;
 
-    & > img {
+    &>img {
         width: 16px;
         height: 16px;
         margin-right: 7px;
@@ -346,14 +387,14 @@
     left: 105px;
     width: 190px;
 
-    & > img {
+    &>img {
         width: 100%;
         height: 100%;
         -o-object-fit: contain;
         object-fit: contain;
     }
 
-    & > video {
+    &>video {
         width: 100%;
         height: 100%;
         -o-object-fit: contain;
