--- a/src/views/Store/store.module.scss
+++ b/src/views/Store/store.module.scss
@@ -33,7 +33,7 @@
 .container {
     display: flex;
     margin: 0 0 35px 1%;
-    width: calc(95.5% - 280px);
+    width: calc(95.5% - 310px);
     padding-bottom: 20px;
     gap: 20px;
     flex-direction: column;
@@ -50,7 +50,7 @@
     align-items: center;
     flex-direction: column;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     width: 100%;
     text-align: center;
 
@@ -143,7 +143,7 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5) inset, 0 0 10px rgba(0, 0, 0, 0.3);
     cursor: pointer;
     overflow: hidden;
-    transition: .2s ease;
+    transition: transform .25s cubic-bezier(.3, .7, .4, 1.5);
 
     @media screen and (max-width: 768px) {
         width: 100%;
