--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -243,17 +243,17 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 1vh;
+    padding-bottom: .5vh;
     gap: 0.5vh;
 
     @media screen and (max-width: 475px) {
         gap: 5px;
-        padding-bottom: 10px;
+        padding-bottom: 5px;
     }
 }
 
 .username {
-    height: 3vh;
+    height: 50%;
     font-size: 2.5vh;
 
     @media screen and (max-width: 475px) {
@@ -262,12 +262,12 @@
 }
 
 .title {
-    height: 2vh;
-    margin-top: -0.8vh;
+    height: 50%;
+    margin-top: -0.5vh;
     font-size: 1.5vh;
 
     @media screen and (max-width: 475px) {
-        margin-top: -8px;
+        margin-top: -5px;
         font-size: 0.9rem;
     }
 }
