--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -58,7 +58,7 @@
 
 .setTopText {
     margin: auto 0;
-    font-family: Titan One, sans-serif;
+    font-family: "Titan One", sans-serif;
     color: var(--accent-color);
     text-shadow: 3px 3px rgba(0, 0, 0, .2);
     font-size: 26px;
