--- a/src/views/AuctionHouse/auctionHouse.module.scss
+++ b/src/views/AuctionHouse/auctionHouse.module.scss
@@ -7,7 +7,6 @@
     bottom: 0;
     height: calc(100% - 150px);
     width: 100%;
-    overflow: hidden;
 
     @media (max-width: 768px) {
         height: 73%;
@@ -19,73 +18,122 @@
     width: 95%;
     height: 95%;
     background: var(--primary-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     border-radius: .7vh;
     box-shadow: inset 0 -9px rgba(0, 0, 0, .2), 0 5px rgba(0, 0, 0, .25);
-    padding-bottom: 9px;
-    overflow: hidden;
+}
+
+.auctionHouseItems {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    overflow-y: auto;
+    margin-top: 1%;
+    height: 95%;
+    width: 98%;
+    margin-left: 1%;
+
+    @media screen and (max-width: 768px) {
+        width: 98%;
+        margin-top: 2%;
+        height: 95%;
+    }
 }
 
 .auction {
+    position: relative;
     display: flex;
-    flex-direction: column;
+    justify-content: flex-start;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    width: 160px;
-    height: 160px;
+    width: 500px;
+    height: 150px;
+    padding: 10px 0;
     background: var(--background-color);
     border-radius: 7px;
-    box-shadow: inset 0 0 -7px rgba(0, 0, 0, .25);
-    margin: 10px;
-    padding-top: 20px;
+    padding-bottom: 15px;
+    box-shadow: inset 0 -7px rgba(0, 0, 0, .2);
+    transition: background-color .2s;
+    cursor: pointer;
+
+    @media (max-width: 768px) {
+        width: 95%;
+    }
+
+    &:hover {
+        background: var(--secondary-color);
+    }
+}
+
+.auctionImageContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 15px;
+    padding-left: 10px;
 
     &>img {
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 100%;
         object-fit: contain;
     }
 
     &>video {
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 100%;
         object-fit: contain;
     }
+}
 
-    .auctionInfo {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        padding: 5px;
+.auctionInfo {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+    gap: 5px;
+    font-weight: 700;
+
+    @media (max-width: 768px) {
         margin-top: 10px;
-        margin-bottom: 15px;
-        box-sizing: border-box;
-        font-size: 15px;
-        color: var(--accent-color);
-        background: var(--secondary-color);
-        border-top: 2px solid rgba(255, 255, 255, .25);
-        border-bottom-left-radius: 7px;
-        border-bottom-right-radius: 7px;
     }
 
-    .auctionName {
-        font-family: "Titan One", sans-serif;
+    &>div>span {
+        font-weight: 400;
     }
+}
 
-    .auctionPrice {
-        display: flex;
-        gap: 5px;
-        font-weight: 700;
-        margin-top: 5px;
-        margin-bottom: 2px;
+.auctionPrice {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 5px;
 
-        &>img {
-            width: 20px;
-            height: 20px;
-            object-fit: contain;
-        }
+    &>img {
+        width: 20px;
+        height: 20px;
+        object-fit: contain;
+    }
+}
+
+.auctionBadge {
+    top: 5px;
+    position: absolute;
+    right: 5px;
+    padding: 5px;
+    background: rgba(0, 0, 0, .15);
+    border-radius: 7px;
+    user-select: none;
+}
+
+.auctionTime {
+    position: absolute;
+    bottom: 12px;
+    right: 5px;
+    padding: 5px;
+    opacity: .5;
+    user-select: none;
+
+    &>i {
+        margin-left: 2px;
     }
 }
