better auction house styles

--- a/src/views/AuctionHouse/auctionHouse.module.scss
+++ b/src/views/AuctionHouse/auctionHouse.module.scss
@@ -59,6 +59,8 @@
 
     @media (max-width: 768px) {
         width: 95%;
+        padding: 5px 0;
+        padding-bottom: 10px;
     }
 
     &:hover {
@@ -70,20 +72,40 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     padding-right: 15px;
     padding-left: 10px;
+
+    @media (max-width: 768px) {
+        padding-left: 5px;
+        padding-right: 10px;
+    }
 
     &>img {
         width: 120px;
         height: 100%;
         object-fit: contain;
+
+        @media (max-width: 768px) {
+            width: 110px;
+        }
     }
 
     &>video {
         width: 120px;
         height: 100%;
         object-fit: contain;
+
+        @media (max-width: 768px) {
+            width: 110px;
+        }
     }
+}
+
+.auctionUsesLeft {
+    margin-top: 10px;
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .auctionInfo {
@@ -95,6 +117,7 @@
 
     @media (max-width: 768px) {
         margin-top: 10px;
+        font-size: 0.9rem;
     }
 
     &>div>span {
@@ -123,6 +146,11 @@
     background: rgba(0, 0, 0, .15);
     border-radius: 7px;
     user-select: none;
+    font-weight: 700;
+
+    @media (max-width: 768px) {
+        font-size: 0.7rem;
+    }
 }
 
 .auctionTime {
@@ -132,6 +160,10 @@
     padding: 5px;
     opacity: .5;
     user-select: none;
+
+    @media (max-width: 768px) {
+        font-size: 0.7rem;
+    }
 
     &>i {
         margin-left: 2px;
