--- a/src/components/TopRight/topRight.module.scss
+++ b/src/components/TopRight/topRight.module.scss
@@ -47,15 +47,21 @@
     align-items: center;
     flex-direction: row;
     height: 100%;
+}
+
+.userLeftAvatar {
+    width: 32.5px;
+    height: 32.5px;
+    margin-right: 10px;
 
     &>img {
-        width: 32.5px;
-        margin-right: 10px;
+        height: 100%;
+        object-fit: contain;
     }
 
     &>video {
-        width: 32.5px;
-        margin-right: 10px;
+        height: 100%;
+        object-fit: contain;
     }
 }
 
