--- a/src/views/AuctionHouse/auctionHouse.module.scss
+++ b/src/views/AuctionHouse/auctionHouse.module.scss
@@ -75,30 +75,24 @@
     flex-direction: column;
     padding-right: 15px;
     padding-left: 10px;
+    width: 120px;
+    height: 110px;
 
     @media (max-width: 768px) {
         padding-left: 5px;
         padding-right: 10px;
+        width: 110px;
+        height: 90px;
     }
 
     &>img {
-        width: 120px;
         height: 100%;
         object-fit: contain;
-
-        @media (max-width: 768px) {
-            width: 110px;
-        }
     }
 
     &>video {
-        width: 120px;
         height: 100%;
         object-fit: contain;
-
-        @media (max-width: 768px) {
-            width: 110px;
-        }
     }
 }
 
