--- a/src/views/Dashboard/dashboard.module.scss
+++ b/src/views/Dashboard/dashboard.module.scss
@@ -99,14 +99,14 @@
 
 .userAvatar {
     height: 11vh;
-    max-width: 10vh;
+    // max-width: 10vh;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     cursor: pointer;
     transition: transform 0.2s;
 
     @media screen and (max-width: 475px) {
         height: 110px;
-        max-width: 100px;
+        // max-width: 100px;
     }
 
     &:hover {
