--- a/src/views/Inventory/inventory.module.scss
+++ b/src/views/Inventory/inventory.module.scss
@@ -133,7 +133,6 @@
     }
 
     &>img {
-        width: 55px;
         height: 65px;
         object-fit: contain;
         -o-object-fit: contain;
@@ -144,7 +143,6 @@
     }
 
     &>video {
-        width: 55px;
         height: 65px;
         object-fit: contain;
         -o-object-fit: contain;
@@ -336,6 +334,8 @@
     bottom: 85px;
     left: 105px;
     width: 190px;
+    height: 210px;
+    justify-content: center;
 
     @media only screen and (max-width: 1000px) {
         bottom: 64px;
@@ -353,18 +353,12 @@
     }
 
     &>img {
-        width: 100%;
         height: 100%;
         -o-object-fit: contain;
         object-fit: contain;
-
-        @media only screen and (max-width: 685px) {
-            width: unset;
-        }
     }
 
     &>video {
-        width: 100%;
         height: 100%;
         -o-object-fit: contain;
         object-fit: contain;
